[metadata]
name = opencmp
version = 0.1.1
description = OpenCMP is a computational multiphysics software package based on the finite element method. It is primarily intended for physicochemical processes involving significant convective flow.
long_description = file: README.md, LICENSE.md
keywords = multiphysics, simulation
license = BSD 3-Clause License
classifiers =
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    numpy;python_version>'3.7.0'
    scipy;python_version>'3.7.0'
    ngsolve;python_version>'3.7.0'
    configparser;python_version>'3.7.0'
    pyparsing;python_version>'3.7.0'

[options.package_data]


[options.entry_points]
console_scripts = 
    get_optional_dependencies = opencmp.entry_points:install_optional_dependencies
    get_pytest = opencmp.entry_points:install_pytest
    pytesting = opencmp.entry_points:pytest_tests
    opencmp = opencmp.entry_points:run_opencmp

[options.extras_require]

[options.packages.find]
